exports[`<RadioGroup /> renders matches previous snapshot 1`] = `
<fieldset
  className="form-group radio  disabled "
  onBlur={[Function anonymous]}>
  <label>
    <input
      aria-disabled={true}
      checked={false}
      name="key"
      onChange={[Function anonymous]}
      type="radio"
      value="option 1" />
    option 1
    <span
      className="cr" />
  </label>
  <label>
    <input
      aria-disabled={true}
      checked={false}
      name="key"
      onChange={[Function anonymous]}
      type="radio"
      value="option 2" />
    option 2
    <span
      className="cr" />
  </label>
</fieldset>
`;

exports[`<RadioGroup /> renders matches previous snapshot 2`] = `
<fieldset
  className="form-group radio   "
  onBlur={[Function anonymous]}>
  <label>
    <input
      aria-disabled={false}
      checked={false}
      name="key"
      onChange={[Function anonymous]}
      type="radio"
      value="option 1" />
    option 1
    <span
      className="cr" />
  </label>
  <label>
    <input
      aria-disabled={false}
      checked={false}
      name="key"
      onChange={[Function anonymous]}
      type="radio"
      value="option 2" />
    option 2
    <span
      className="cr" />
  </label>
</fieldset>
`;

exports[`<RadioGroup /> renders matches previous snapshot 3`] = `
<fieldset
  className="form-group radio   "
  onBlur={[Function anonymous]}>
  <label>
    <input
      aria-disabled={false}
      checked={false}
      name="key"
      onChange={[Function anonymous]}
      type="radio"
      value="option 1" />
    option 1
    <span
      className="cr" />
  </label>
  <label>
    <input
      aria-disabled={false}
      checked={false}
      name="key"
      onChange={[Function anonymous]}
      type="radio"
      value="option 2" />
    option 2
    <span
      className="cr" />
  </label>
</fieldset>
`;

exports[`<RadioGroup /> renders matches previous snapshot 4`] = `
<fieldset
  className="form-group radio   "
  onBlur={[Function anonymous]}>
  <label>
    <input
      aria-disabled={false}
      checked={false}
      name="key"
      onChange={[Function anonymous]}
      type="radio"
      value="option 1" />
    option 1
    <span
      className="cr" />
  </label>
  <label>
    <input
      aria-disabled={false}
      checked={false}
      name="key"
      onChange={[Function anonymous]}
      type="radio"
      value="option 2" />
    option 2
    <span
      className="cr" />
  </label>
</fieldset>
`;
